Update song name and artist name in index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="main_div">
         <div class="music_container">
-            <h2 id="title">Maan Meri Jaan</h2>
-            <h3 id="artist">Love Song</h3>
+            <h2 id="title">Kahani Suno</h2>
+            <h3 id="artist">Kaifi Khalil</h3>
             <div class="img_container">
                 <img src="img/lk1.jpg" alt="">
             </div>
